...
        ) {
            Image(
                modifier = Modifier
                    .wrapContentSize()
                    .align(Alignment.Center),
                painter = painterResource(R.drawable.img_nimble_logo),
                contentDescription = "Nimble Logo",
            )
        }

        Box(
            modifier = Modifier
                .fillMaxWidth()
...
